fixed notifications message overflow element

--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -5,7 +5,7 @@
 
     .notif-content{
         width: 100%;
-        height: 50px;
+        height: max-content;
         display: flex;
         align-items: center;
         color: var(--color-1);
@@ -23,7 +23,7 @@
         opacity: 0;
         transform: translateY(10px);
     } to {
-        opacity: .5;
+        opacity: 1;
         transform: translateY(0);
     }
 }
